feat(auth): add endpoint to allow OAuth users to set password authentication
